Formatting of tex document and final date

--- a/satzung.tex
+++ b/satzung.tex
@@ -36,7 +36,7 @@
 \parskip1.0ex plus0.1ex minus0.1ex
 
 \title{\bf Satzung des Netzvereins StuStaNet e.V.}
-\date{12. Dezember 2001}
+\date{14. Dezember 2017}
 \begin{document}
 \maketitle
 
@@ -46,8 +46,7 @@
 
 \Satz{1}{Der Verein führt den Namen {\it StuStaNet}.}
 
-\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erhält
-daraufhin den Namenszusatz e.V.}
+\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erhält daraufhin den Namenszusatz e.V.}
 
 \Satz{3}{Sitz des Vereins ist München.}
 
@@ -55,62 +54,48 @@ daraufhin den Namenszusatz e.V.}
 
 \begin{Artikel}{2}{Zweck}
 
-\Satz{1}{Zweck des Verein ist die Studentenhilfe. Dazu errichtet und unterhält
-er in der Studentenstadt Freimann ein Rechnernetz mit Internet-Anbindung.
-Darüber hinaus will der Verein durch Informations- und Schulungsveranstaltungen
-den Studenten Kompetenz im Umgang mit den Neuen Medien vermitteln.}
+\Satz{1}{Zweck des Verein ist die Studentenhilfe.
+Dazu errichtet und unterhält er in der Studentenstadt Freimann ein Rechnernetz mit Internet-Anbindung.
+Darüber hinaus will der Verein durch Informations- und Schulungsveranstaltungen den Studenten Kompetenz im Umgang mit den Neuen Medien vermitteln.}
 
-\Satz{2}{Um den Vereinszweck zu erreichen, arbeitet der Verein insbesondere mit
-dem Studentenwerk München und dem Leibniz-Rechenzentrum der Bayerischen
-Akademie der Wissenschaften zusammen.}
+\Satz{2}{Um den Vereinszweck zu erreichen, arbeitet der Verein insbesondere mit dem Studentenwerk München und dem Leibniz-Rechenzentrum der Bayerischen Akademie der Wissenschaften zusammen.}
 
 \end{Artikel}
 
 \begin{Artikel}{3}{Gemeinnützigkeit}
-
-Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im
-Sinne des Abschnitts {\it Steuerbegünstigte Zwecke} der Abgabenordnung.  Der
-Verein ist selbstlos tätig; er verfolgt nicht in erster Linie
-eigenwirtschaftliche Zwecke. Mittel des Vereins dürfen nur für die
-satzungsmäßigen Zwecke verwendet werden. Die Mitglieder erhalten keine
-Zuwendungen aus Mitteln des Vereins. Es darf keine Person durch Ausgaben, die
-dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe Vergütungen
-begünstigt werden.
+Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im Sinne des Abschnitts {\it Steuerbegünstigte Zwecke} der Abgabenordnung.
+Der Verein ist selbstlos tätig; er verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke.
+Mittel des Vereins dürfen nur für die satzungsmäßigen Zwecke verwendet werden.
+Die Mitglieder erhalten keine Zuwendungen aus Mitteln des Vereins.
+Es darf keine Person durch Ausgaben, die dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe Vergütungen begünstigt werden.
 
 \end{Artikel}
 
 
 \begin{Artikel}{4}{Geschäftsjahr}
 
-Geschäftsjahr des Vereins ist das Kalenderjahr. Das erste Rumpfgeschäftsjahr
-endet am 31.12.1998.
+Geschäftsjahr des Vereins ist das Kalenderjahr. Das erste Rumpfgeschäftsjahr endet am 31.12.1998.
 
 \end{Artikel}
 
 \begin{Artikel}{5}{Allgemeine Bestimmungen}
 
-\Satz{1}{Ordnungsgemäß einberufene Gremien sind beschlußfähig, wenn mindestens
-zwei stimmberechtigte Mitglieder anwesend sind. Sitzungen an Samstagen, Sonn-
-und Feiertagen sind unzulässig, es sei denn, das Gremium ist vollzählig.
-Insbesondere ist auf die Einhaltung einer angemessenen Frist zwischen
-Einberufung und Sitzungstermin zu achten.}
+\Satz{1}{Ordnungsgemäß einberufene Gremien sind beschlußfähig, wenn mindestens zwei stimmberechtigte Mitglieder anwesend sind.
+  Sitzungen an Samstagen, Sonn-und Feiertagen sind unzulässig, es sei denn, das Gremium ist vollzählig.
+  Insbesondere ist auf die Einhaltung einer angemessenen Frist zwischen Einberufung und Sitzungstermin zu achten.}
 
-\Satz{2}{Enthaltungen werden als ungültige Stimmen gewertet. Soweit diese
-Satzung nichts anderes bestimmt, werden Beschlüsse mit der Mehrheit der
-gültigen Stimmen gefaßt. Gewählt ist, wer mehr als die Hälfte der gültig
-abgegebenen Stimmen erhält. Erreicht dies kein Kandidat, findet eine Stichwahl
-zwischen den beiden bestplatzierten statt.}
+\Satz{2}{Enthaltungen werden als ungültige Stimmen gewertet.
+  Soweit diese Satzung nichts anderes bestimmt, werden Beschlüsse mit der Mehrheit der gültigen Stimmen gefaßt.
+  Gewählt ist, wer mehr als die Hälfte der gültig abgegebenen Stimmen erhält.
+  Erreicht dies kein Kandidat, findet eine Stichwahl zwischen den beiden bestplatzierten statt.}
 
-\Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den Vorstand
-weitergeleitet. Beschlüsse werden vom Vorstand im Netz veröffentlicht.
-Einspruch ist binnen zweier Monate nach der Veröffentlichung an den Vorstand zu
-richten.}
+\Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den Vorstand weitergeleitet.
+  Beschlüsse werden vom Vorstand im Netz veröffentlicht.
+  Einspruch ist binnen zweier Monate nach der Veröffentlichung an den Vorstand zu richten.}
 
-\Satz{4}{Von dieser Satzung, allen Vereins- und Geschäftsordnungen, und den
-Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
+\Satz{4}{Von dieser Satzung, allen Vereins- und Geschäftsordnungen, und den Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 
-\Satz{5}{Unter der URL "`http://vereinsanzeiger.stustanet.de/"' befindet sich
-der offizielle Vereinsanzeiger.}
+\Satz{5}{Unter der URL "`http://vereinsanzeiger.stustanet.de/"' befindet sich der offizielle Vereinsanzeiger.}
 
 \end{Artikel}
 
@@ -118,11 +103,10 @@ der offizielle Vereinsanzeiger.}
 
 \begin{Artikel}{6}{Mitglieder}
 
-\Satz{1}{Jeder Bewohner der Studentenstadt oder eines anderen vom Verein
-betreuten Studentenwohnheims kann regelmäßig Mitglied werden. 
-Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung
-einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.  Art. 10
-Abs. 3 ist anzuwenden.}
+\Satz{1}{Jeder Bewohner der Studentenstadt oder eines anderen vom Verein betreuten Studentenwohnheims kann regelmäßig Mitglied werden.
+  Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung einer Mitgliedskarte.
+  Eine Ablehnung ist schriftlich zu begründen.
+  Art. 10 Abs. 3 ist anzuwenden.}
 
 \end{Artikel}
 
@@ -131,9 +115,8 @@ Abs. 3 ist anzuwenden.}
 \Satz{1}{Jedes Mitglied hat eine Stimme auf der Mitgliedervollversammlung und
 der Hausmitgliederversammlung seines Hauses.}
 
-\Satz{2}{Vom Verein angebotene Netzdienste stehen grundsätzlich allen
-Mitgliedern offen. Der Administratorenrat erläßt verbindliche
-Nutzungsbedingungen.}
+\Satz{2}{Vom Verein angebotene Netzdienste stehen grundsätzlich allen Mitgliedern offen.
+  Der Administratorenrat erläßt verbindliche Nutzungsbedingungen.}
 
 \Satz{3}{Anschriftenänderungen sind dem Vorstand unverzüglich anzuzeigen.}
 
@@ -143,74 +126,57 @@ Nutzungsbedingungen.}
 
 \begin{Artikel}{8}{Beiträge}
 
-\Satz{1}{Es werden Semesterbeiträge erhoben. Über die Höhe beschließt die
-Mitgliedervollversammlung. Semesterbeiträge sind unaufgefordert bis \mbox{1.
-April} bzw. \mbox{1. Oktober} für das folgende Semester im voraus zu leisten.
-Bei Beitragsrückstand erfolgt die Streichung aus der Mitgliederliste gemäß Art.
-10.}
+\Satz{1}{Es werden Semesterbeiträge erhoben.
+  Über die Höhe beschließt die Mitgliedervollversammlung.
+  Semesterbeiträge sind unaufgefordert bis \mbox{1. April} bzw. \mbox{1. Oktober} für das folgende Semester im voraus zu leisten.
+  Bei Beitragsrückstand erfolgt die Streichung aus der Mitgliederliste gemäß Art. 10.}
 
-\Satz{2}{Es werden Aufnahmebeiträge erhoben. Über die Höhe befindet die
-Mitgliedervollversammlung oder bis zur Höhe von 25 EUR der Vorstand.}
+\Satz{2}{Es werden Aufnahmebeiträge erhoben.
+  Über die Höhe befindet die Mitgliedervollversammlung oder bis zur Höhe von 25 EUR der Vorstand.}
 
 \end{Artikel}
 
 \begin{Artikel}{9}{Ehrenmitglieder}
 
-\Satz{1}{Personen, die sich für den Verein besonders eingesetzt haben, können
-auf Antrag eines Hauses, des Vorstands oder des Administratorenrats von der
-Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
+\Satz{1}{Personen, die sich für den Verein besonders eingesetzt haben, können auf Antrag eines Hauses, des Vorstands oder des Administratorenrats von der Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
 
-\Satz{2}{Die Ehrenmitgliedschaft ist auf fünf Jahre befristet. Der Vorstand
-kann sie auf Antrag des Ehrenmitgliedes um jeweils fünf Jahre verlängern.}
+\Satz{2}{Die Ehrenmitgliedschaft ist auf fünf Jahre befristet.
+  Der Vorstand kann sie auf Antrag des Ehrenmitgliedes um jeweils fünf Jahre verlängern.}
 
-\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. Im übrigen
-bleiben ihre Rechte und Pflichten als Mitglied unberührt.}
+\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit.
+  Im übrigen bleiben ihre Rechte und Pflichten als Mitglied unberührt.}
 
 \end{Artikel}
 
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
 \Satz{1}{Die Mitgliedschaft ist grundsätzlich auf 4 Jahre befristet.
-Sie endet jedoch immer erst zu dem Zeitpunkt, an dem der Vorstand das
-Mitglied aus der Mitgliederliste streicht.
-Die Mitgliedschaft kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre 
-verlängert werden.
-Bekleidet ein Mitglied ein Amt und würde seine Mitgliedschaft während seiner
-Amtszeit enden, so verlängert sie sich automatisch um ein weiteres Jahr.}
+  Sie endet jedoch immer erst zu dem Zeitpunkt, an dem der Vorstand das Mitglied aus der Mitgliederliste streicht.
+  Die Mitgliedschaft kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre verlängert werden.
+  Bekleidet ein Mitglied ein Amt und würde seine Mitgliedschaft während seiner Amtszeit enden, so verlängert sie sich automatisch um ein weiteres Jahr.}
 
 \Satz{2}{Die Mitgliedschaft endet desweiteren:
 \begin{itemize}
 \item mit dem Tod des Mitglieds;
-\item durch schriftliche Austrittserklärung, die einen Monat im voraus an
-ein Vorstandsmitglied zu richten ist. 
+\item durch schriftliche Austrittserklärung, die einen Monat im voraus an ein Vorstandsmitglied zu richten ist;
 \item durch Ausschluß aus dem Verein;
 \item durch Streichung aus der Mitgliederliste.
 \end{itemize}
-Bereits geleistete Semesterbeiträge werden anteilig an Monaten zurückerstattet, wenn
-dieser Anteil 25 EUR übersteigt.}
+Bereits geleistete Semesterbeiträge werden anteilig an Monaten zurückerstattet, wenn dieser Anteil 25 EUR übersteigt.}
 
-\Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
-verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
-werden. Vor dem Ausschluß ist das betroffene Mitglied schriftlich zu hören. Die
-Entscheidung über den Ausschluß ist schriftlich zu begründen und dem Mitglied
-mit Einschreiben gegen Rückschein an seine letztbekannte Anschrift zuzustellen.
-Das Mitglied kann innerhalb einer Frist von einem Monat ab Zugang schriftlich
-Berufung beim Vorstand einlegen. Über die Berufung entscheidet die
-Mitgliedervollversammlung. Macht das Mitglied vom Recht der Berufung innerhalb
-der Frist keinen Gebrauch, unterwirft es sich dem Ausschließungsbeschluß.}
+\Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen werden.
+  Vor dem Ausschluß ist das betroffene Mitglied schriftlich zu hören.
+  Die Entscheidung über den Ausschluß ist schriftlich zu begründen und dem Mitglied mit Einschreiben gegen Rückschein an seine letztbekannte Anschrift zuzustellen.
+  Das Mitglied kann innerhalb einer Frist von einem Monat ab Zugang schriftlich Berufung beim Vorstand einlegen.
+  Über die Berufung entscheidet die Mitgliedervollversammlung.
+  Macht das Mitglied vom Recht der Berufung innerhalb der Frist keinen Gebrauch, unterwirft es sich dem Ausschließungsbeschluß.}
 
-\Satz{4}{Die Streichung des Mitglieds aus der Mitgliederliste erfolgt durch den
-Vorstand, wenn das Mitglied einen Monat mit dem Semesterbeitrag in Verzug ist
-und diesen Betrag auch nach schriftlicher Mahnung durch den Vorstand nicht
-innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte
-Anschrift des Mitglieds voll entrichtet. In der Mahnung muß auf die
-bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
+\Satz{4}{Die Streichung des Mitglieds aus der Mitgliederliste erfolgt durch den Vorstand, wenn das Mitglied einen Monat mit dem Semesterbeitrag in Verzug ist und diesen Betrag auch nach schriftlicher Mahnung durch den Vorstand nicht innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte Anschrift des Mitglieds voll entrichtet.
+  In der Mahnung muß auf die bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 
-\Satz{5}{Die Streichung erfolgt regelmäßig ebenfalls, wenn das Mitglied an der
-dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
+\Satz{5}{Die Streichung erfolgt regelmäßig ebenfalls, wenn das Mitglied an der dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
 
-\Satz{6}{Die Streichung erfolgt außerdem regelmäßig, wenn die Mitgliedschaft
-abgelaufen ist und keine Verlängerung erfolgt ist.}
+\Satz{6}{Die Streichung erfolgt außerdem regelmäßig, wenn die Mitgliedschaft abgelaufen ist und keine Verlängerung erfolgt ist.}
 
 \end{Artikel}
 
@@ -218,41 +184,29 @@ abgelaufen ist und keine Verlängerung erfolgt ist.}
 
 \begin{Artikel}{11}{Geldvermögen}
 
-\Satz{1}{Die Geldmittel des Vereins werden vom Schatzmeister verwaltet.  Die
-Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
-richten.}
+\Satz{1}{Die Geldmittel des Vereins werden vom Schatzmeister verwaltet.
+  Die Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu richten.}
 
-\Satz{2}{Der Schatzmeister erstellt einen Haushaltsplan und einen
-Liquiditätsplan.}
+\Satz{2}{Der Schatzmeister erstellt einen Haushaltsplan und einen Liquiditätsplan.}
 
 \end{Artikel}
 
 \begin{Artikel}{12}{Sachvermögen}
 
-\Satz{1}{Die Sachmittel des Vereins werden von den Hausadministratoren, von den
-Sonderadministratoren, vom Vorsitzenden des Administratorenrates oder vom
-Vorstand verwaltet, abhängig davon, ob mit ihnen Aufgaben der Häuser, des
-Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten werden.}
+\Satz{1}{Die Sachmittel des Vereins werden von den Hausadministratoren, von den Sonderadministratoren, vom Vorsitzenden des Administratorenrates oder vom Vorstand verwaltet, abhängig davon, ob mit ihnen Aufgaben der Häuser, des Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten werden.}
 
 \end{Artikel}
 
 \begin{Artikel}{13}{Gewalt über die technische Infrastruktur}
 
-\Satz{1}{Das Rechnernetz ist bis zu den Endgeräten durch Vereinseigentum
-aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abhängen. 
-Hardware des Studentenwerks, von beauftragten Firmen, des
-Leibniz-Rechenzentrums oder anderer öffentlicher Einrichtungen sind davon
-ausgenommen.}
+\Satz{1}{Das Rechnernetz ist bis zu den Endgeräten durch Vereinseigentum aufzubauen.
+  Seine Funktion darf nur von vereinseigener Hardware abhängen.
+  Hardware des Studentenwerks, von beauftragten Firmen, des Leibniz-Rechenzentrums oder anderer öffentlicher Einrichtungen sind davon ausgenommen.}
 
-\Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder anderen
-technischen Einrichtungen werden regelmäßig nur Administratoren, den
-Mitgliedern des Vorstandes sowie Beauftragten des Studentenwerks eingeräumt.
-Über begründete Ausnahmen beschließt der Administratorenrat im Einvernehmen mit
-dem Vorstand.}
+\Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder anderen technischen Einrichtungen werden regelmäßig nur Administratoren, den Mitgliedern des Vorstandes sowie Beauftragten des Studentenwerks eingeräumt.
+Über begründete Ausnahmen beschließt der Administratorenrat im Einvernehmen mit dem Vorstand.}
 
-\Satz{3}{Die technischen Vorstände führen eine Liste, wer auf welchem der
-vereinseigenen Rechner oder technischen Einrichtungen weitergehende Rechte
-besitzt.}
+\Satz{3}{Die technischen Vorstände führen eine Liste, wer auf welchem der vereinseigenen Rechner oder technischen Einrichtungen weitergehende Rechte besitzt.}
 
 \end{Artikel}
 
@@ -268,10 +222,8 @@ besitzt.}
 \item der Administratorenrat.
 \end{itemize}}
 
-\Satz{2}{Die Vertretung nach außen im Sinne des \S 26 BGB üben immer zwei
-Vorstandsmitglieder gemeinsam aus. Mit Wirkung gegen Dritte wird allen Organen
-untersagt, ohne Zustimmung der Mitgliedervollversammlung Kredite oder andere
-Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
+\Satz{2}{Die Vertretung nach außen im Sinne des \S 26 BGB üben immer zwei Vorstandsmitglieder gemeinsam aus.
+  Mit Wirkung gegen Dritte wird allen Organen untersagt, ohne Zustimmung der Mitgliedervollversammlung Kredite oder andere Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
 
 \end{Artikel}
 
@@ -279,78 +231,57 @@ Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
 
 \begin{Artikel}{15}{Aufgaben}
 
-\Satz{1}{Die Mitgliedervollversammlung kümmert sich um alle Fragen mit
-zentraler Bedeutung für den Gesamtverein.}
+\Satz{1}{Die Mitgliedervollversammlung kümmert sich um alle Fragen mit zentraler Bedeutung für den Gesamtverein.}
 
 \Satz{2}{Sie hat insbesondere folgende Aufgaben:
 \begin{itemize}
 \item Genehmigung des Haushaltsplans für das folgende Geschäftsjahr
-\item Entgegennahme des Rechenschaftsberichts des Vorstands und dessen 
-Entlastung
-\item Wahl des Vorstands, der Sonderadministratoren und des 
-Kassenprüfungsausschusses
+\item Entgegennahme des Rechenschaftsberichts des Vorstands und dessen Entlastung
+\item Wahl des Vorstands, der Sonderadministratoren und des Kassenprüfungsausschusses
 \item Festsetzung der Höhe des Mitgliedsbeitrags und der Aufnahmegebühren
 \item Beschlußfassung über Satzungsänderungen und Vereinsauflösung
-\item Beschlußfassung über die Berufung eines Mitglieds gegen einen 
-Ausschluß durch den Vorstand
-\item Die Einteilung der Studentenstadt und anderer vom Verein betreuten
-Studentenwohnheime in Häuser
-\item Sie entscheidet, welche Studentenwohnheime neben der Studentenstadt
-vom Verein betreut werden.
+\item Beschlußfassung über die Berufung eines Mitglieds gegen einen Ausschluß durch den Vorstand
+\item Die Einteilung der Studentenstadt und anderer vom Verein betreuten Studentenwohnheime in Häuser
+\item Sie entscheidet, welche Studentenwohnheime neben der Studentenstadt vom Verein betreut werden.
 \end{itemize}}
 
-\Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
-Beitragsordnung oder eine Haushaltsordnung erlassen.}
+\Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine Beitragsordnung oder eine Haushaltsordnung erlassen.}
 
-\Satz{4}{Die Mitgliedervollversammlung kann grundsätzlich festlegen, dass
-bestimmte Netzdienste angeboten werden sollen oder nicht angeboten werden
-sollen. Möchte die Mitgliedervollversammlung bestimmte Netzdienste anbieten, so
-ist die technische Infrastruktur dafür bevorzugt einzusetzen. Die Mitglieder
-des Administratorenrates sind jedoch nicht verpflichtet, diese Netzdienste
-selbst zu realisieren.}
+\Satz{4}{Die Mitgliedervollversammlung kann grundsätzlich festlegen, dass bestimmte Netzdienste angeboten werden sollen oder nicht angeboten werden sollen.
+  Möchte die Mitgliedervollversammlung bestimmte Netzdienste anbieten, so ist die technische Infrastruktur dafür bevorzugt einzusetzen.
+  Die Mitglieder des Administratorenrates sind jedoch nicht verpflichtet, diese Netzdienste selbst zu realisieren.}
 
-\Satz{5}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll
-aufzunehmen, vom Versammlungsleiter zu unterzeichnen und vom Vorstand zu
-ver\-öffent\-lichen.}
+\Satz{5}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll aufzunehmen, vom Versammlungsleiter zu unterzeichnen und vom Vorstand zu ver\-öffent\-lichen.}
 
 \end{Artikel}
 
 \begin{Artikel}{16}{Einberufung}
 
-\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 16. Mai bis 16. Juni und 16. November bis 16. Dezember statt.}
+\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich, und zwar in den Zeiträumen 16. Mai bis 16. Juni und 16. November bis 16. Dezember statt.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
-Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
-eingeladen, wobei der Tag der Ver\-öffent\-lichung und der Tag der Versammlung
-nicht mitgezählt werden.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger eingeladen, wobei der Tag der Ver\-öffent\-lichung und der Tag der Versammlung nicht mitgezählt werden.}
 
-\Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom Vorstand
-festgesetzte Tagesordnung mitzuteilen.}
+\Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom Vorstand festgesetzte Tagesordnung mitzuteilen.}
 
-\Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche
-Mitgliedervollversammlung einzuberufen, wenn das Vereinsinteresse es erfordert
-oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich
-unter Angabe des Zwecks und der Gründe fordern.}
+\Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche Mitgliedervollversammlung einzuberufen, wenn das Vereinsinteresse es erfordert oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich unter Angabe des Zwecks und der Gründe fordern.}
 
 \end{Artikel}
 
-\UAbschnitt{Häuser} 
+\UAbschnitt{Häuser}
 
 \begin{Artikel}{17}{Gliederung in Häuser}
 
-\Satz{1}{Der Verein ist in Häuser untergliedert. Die Häuser regeln ihre Belange
-selbst. Der Vorstand und der Administratorenrat können den Häusern Weisungen
-erteilen.}
+\Satz{1}{Der Verein ist in Häuser untergliedert.
+  Die Häuser regeln ihre Belange selbst.
+  Der Vorstand und der Administratorenrat können den Häusern Weisungen erteilen.}
 
 \Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet.}
 
-\Satz{3}{Die Mitglieder können die Zuordnung zu den Häusern nicht wählen. 
-Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
-Vorstand.}
+\Satz{3}{Die Mitglieder können die Zuordnung zu den Häusern nicht wählen.
+  Ausschlaggebend ist der Standort ihres Anschlusses.
+  Im Zweifel entscheidet der Vorstand.}
 
-\Satz{4}{Mitglieder, die nicht in einem vom Verein betreuten Studentenwohnheim
-wohnen, gehören keinem Haus an.}
+\Satz{4}{Mitglieder, die nicht in einem vom Verein betreuten Studentenwohnheim wohnen, gehören keinem Haus an.}
 
 \end{Artikel}
 
@@ -358,32 +289,26 @@ wohnen, gehören keinem Haus an.}
 
 \Satz{1}{Die Häuser organisieren das Vereinsleben auf Hausebene.}
 
-\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie. Die Vorgaben
-des Administratorenrates werden dabei von ihnen beachtet.}
+\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie.
+  Die Vorgaben des Administratorenrates werden dabei von ihnen beachtet.}
 
 \end{Artikel}
 
 \begin{Artikel}{19}{Hausadministratoren}
 
-\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 20 Mitgliedern
-darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
-Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
+\Satz{1}{Jedes Haus hat einen Hausadministrator.
+  Pro angefangene 20 Mitgliedern darf ein weiterer gewählt werden.
+  Ausschlaggebend ist die Mitgliederzahl am Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 
-\Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
-und sind Mitglied im Administratorenrat.}
+\Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren beginnen mit der Aufnahme
-durch den vorsitzenden Vorstand auf die Liste der derzeit tätigen Administratoren
-und enden mit Amtsantritt der neuen Hausadministratoren oder spätestens zum
-Ende des darauffolgenden Wahlzeitraumes.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren beginnen mit der Aufnahme durch den vorsitzenden Vorstand auf die Liste der derzeit tätigen Administratoren und enden mit Amtsantritt der neuen Hausadministratoren oder spätestens zum Ende des darauffolgenden Wahlzeitraumes.}
 
-\Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
-führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
-diese Liste ist der Gewählte zum Administrator bestellt.}
+\Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.
+  Dieser führt eine Liste der derzeitig tätigen Administratoren.
+  Mit der Aufnahme in diese Liste ist der Gewählte zum Administrator bestellt.}
 
-\Satz{5}{Wählt ein Haus nicht mindestens einen Hausadministrator, oder sind
-alle Hausadministratorenstellen eines Hauses verwaist, so setzt der
-Administratorenrat einen Hausadministrator ein.}
+\Satz{5}{Wählt ein Haus nicht mindestens einen Hausadministrator, oder sind alle Hausadministratorenstellen eines Hauses verwaist, so setzt der Administratorenrat einen Hausadministrator ein.}
 
 \end{Artikel}
 
@@ -391,31 +316,24 @@ Administratorenrat einen Hausadministrator ein.}
 
 \Satz{1}{Die Hausmitgliederversammlung regelt alle Belange ihres Hauses.}
 
-\Satz{2}{Sie wählt die Hausadministratoren, überwacht deren Amtsführung und
-beschließt über ihre Entlastung.}
+\Satz{2}{Sie wählt die Hausadministratoren, überwacht deren Amtsführung und beschließt über ihre Entlastung.}
 
-\Satz{3}{Die Hausadministratoren legen ihr Fragen von besonderem Gewicht zur
-Entscheidung vor.}
+\Satz{3}{Die Hausadministratoren legen ihr Fragen von besonderem Gewicht zur Entscheidung vor.}
 
-\Satz{4}{Den Vorsitz führt in der Regel einer der Hausadministratoren des
-Hauses.}
+\Satz{4}{Den Vorsitz führt in der Regel einer der Hausadministratoren des Hauses.}
 
 \end{Artikel}
 
 \begin{Artikel}{21}{Einberufung}
 
-\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 15. April bis 15. Mai und 15. Oktober bis 15. November, statt. Sie
-wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
-vom Vorstand einberufen.}
+\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich, und zwar in den Zeiträumen 15. April bis 15. Mai und 15. Oktober bis 15. November, statt.
+  Sie wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall vom Vorstand einberufen.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
-Hausmitgliederversammlung von einem der Hausadministratoren durch Aushang im
-Vereinsanzeiger eingeladen. Artikel 16, Abs. 2 und 3 gelten entsprechend.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer Hausmitgliederversammlung von einem der Hausadministratoren durch Aushang im Vereinsanzeiger eingeladen.
+  Artikel 16, Abs. 2 und 3 gelten entsprechend.}
 
-\Satz{3}{Die Hausadministratoren können eine außerordentliche
-Hausmitgliederversammlung einberufen. Sie müssen das innerhalb von drei Wochen
-tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
+\Satz{3}{Die Hausadministratoren können eine außerordentliche Hausmitgliederversammlung einberufen.
+  Sie müssen das innerhalb von drei Wochen tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 
 \end{Artikel}
 
@@ -423,18 +341,15 @@ tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 
 \begin{Artikel}{22}{Zusammmensetzung und Amtszeit}
 
-\Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
-dem ersten und zweiten technischen Vorstand zusammen. Ist das Amt des dritten
-technischen Vorstands besetzt, so gehört auch er dem Vorstand an.}
+\Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie dem ersten und zweiten technischen Vorstand zusammen.
+  Ist das Amt des dritten technischen Vorstands besetzt, so gehört auch er dem Vorstand an.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Wahl erfolgt geheim und
-für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
-läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
-Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
-aus, wählt der Administratorenrat für die Zeit bis zur nächsten
-Mitgliedervollversammlung ein Ersatzmitglied.
-Scheidet der dritte Technische Vorstand während der Amtsperiode aus, so wird für
-diesen kein Ersatzmitglied bestimmt.}
+\Satz{2}{Der Vorstand wird auf ein Jahr gewählt.
+  Die Wahl erfolgt geheim und für jedes Vorstandsamt einzeln.
+  Die Amtsperiode des Vorstandes läuft vom 1. Juli bis 30. Juni.
+  Er bleibt so lange im Amt, bis ein neuer Vorstand sein Amt angetreten hat.
+  Scheidet ein Mitglied während der Amtsperiode aus, wählt der Administratorenrat für die Zeit bis zur nächsten Mitgliedervollversammlung ein Ersatzmitglied.
+  Scheidet der dritte Technische Vorstand während der Amtsperiode aus, so wird für diesen kein Ersatzmitglied bestimmt.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
@@ -442,48 +357,39 @@ diesen kein Ersatzmitglied bestimmt.}
 
 \begin{Artikel}{23}{Geschäftsverteilung}
 
-\Satz{1}{Der Vorsitzende kümmert sich um alle wichtigen Belange des Vereins. Er
-koordiniert die Kontakte nach außen und beruft bei Bedarf Vorstandssitzungen
-ein. Er führt die Administratorenliste und sammelt und publiziert die
-Protokolle aller beschlußfassenden Gremien. Ferner sorgt er für die
-Verfügbarkeit aller gültigen Regelwerke des Vereins in der jeweils aktuellen
-Fassung.}
+\Satz{1}{Der Vorsitzende kümmert sich um alle wichtigen Belange des Vereins.
+  Er koordiniert die Kontakte nach außen und beruft bei Bedarf Vorstandssitzungen ein.
+  Er führt die Administratorenliste und sammelt und publiziert die Protokolle aller beschlußfassenden Gremien.
+  Ferner sorgt er für die Verfügbarkeit aller gültigen Regelwerke des Vereins in der jeweils aktuellen Fassung.}
 
-\Satz{2}{Der Schatzmeister verwaltet alles Geldvermögen. Er ist verantwortlich
-für eine ordnungsgemäße Buchführung. Er führt die Mitgliederliste. Er vertritt
-den Vorsitzenden, falls dieser verhindert ist. Der Schatzmeister kann nicht
-gleichzeitig Administrator sein.}
+\Satz{2}{Der Schatzmeister verwaltet alles Geldvermögen.
+  Er ist verantwortlich für eine ordnungsgemäße Buchführung.
+  Er führt die Mitgliederliste.
+  Er vertritt den Vorsitzenden, falls dieser verhindert ist.
+  Der Schatzmeister kann nicht gleichzeitig Administrator sein.}
 
 \Satz{3}{Der erste technische Vorstand führt den Vorsitz im Administratorenrat.
-Er muß mindestens 6 Monate lang Administrator gewesen sein oder mit
-satzungsändernder Mehrheit gewählt werden.}
+  Er muß mindestens 6 Monate lang Administrator gewesen sein oder mit satzungsändernder Mehrheit gewählt werden.}
 
-\Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
-technischen Vorstand in all seinen Aufgaben und ist erster stellvertretender
-Vorsitzender des Administratorenrates.}
+\Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten technischen Vorstand in all seinen Aufgaben und ist erster stellvertretender Vorsitzender des Administratorenrates.}
 
-\Satz{5}{Der dritte technische Vorstand unterstützt ersten und zweiten
-technischen Vorstand. Er vertritt diese in all ihren Aufgaben und ist zweiter
-stellvertretender Vorsitzender des Administratorenrates.
-Das Amt des dritten technischen Vorstands kann unbesetzt bleiben.}
+\Satz{5}{Der dritte technische Vorstand unterstützt ersten und zweiten technischen Vorstand.
+  Er vertritt diese in all ihren Aufgaben und ist zweiter stellvertretender Vorsitzender des Administratorenrates.
+  Das Amt des dritten technischen Vorstands kann unbesetzt bleiben.}
 
 \end{Artikel}
 
 \begin{Artikel}{24}{Aufgaben}
 
-\Satz{1}{Die Vorstände sind die kaufmännische und organisatorische 
-Führung des Vereins. Sie haben auch im Falle ihrer Abwesenheit für die 
-Abwicklung notwendiger Vorgänge Sorge zu tragen.}
+\Satz{1}{Die Vorstände sind die kaufmännische und organisatorische Führung des Vereins.
+  Sie haben auch im Falle ihrer Abwesenheit für die Abwicklung notwendiger Vorgänge Sorge zu tragen.}
 
-\Satz{2}{Die Vorstände sollen die Entwicklung des Vereins fördern und die
-finanzielle Stabilität sicherstellen.}
+\Satz{2}{Die Vorstände sollen die Entwicklung des Vereins fördern und die finanzielle Stabilität sicherstellen.}
 
-\Satz{3}{Ausgaben sind vom Vorstand zu bewilligen. Bei Ausgaben über 3.000 EUR
-müssen mindestens vier Vorstandsmitglieder zustimmen, darunter der
-Schatzmeister oder der Vorsitzende.}
+\Satz{3}{Ausgaben sind vom Vorstand zu bewilligen.
+  Bei Ausgaben über 3.000 EUR müssen mindestens vier Vorstandsmitglieder zustimmen, darunter der Schatzmeister oder der Vorsitzende.}
 
-\Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
-technischen Infrastruktur sein.}
+\Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der technischen Infrastruktur sein.}
 
 \end{Artikel}
 
@@ -491,8 +397,7 @@ technischen Infrastruktur sein.}
 
 \begin{Artikel}{25}{Zusammensetzung}
 
-\Satz{1}{Mitglieder des Administratorenrates sind die Haus- und
-Sonderadministratoren und die technischen Vorstände.}
+\Satz{1}{Mitglieder des Administratorenrates sind die Haus- und Sonderadministratoren und die technischen Vorstände.}
 
 \Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulässig.}
 
@@ -502,41 +407,31 @@ Sonderadministratoren und die technischen Vorstände.}
 
 \Satz{1}{Der Administratorenrat kümmert sich um alle technischen Belange.}
 
-\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die
-technische Infrastruktur des Vereins. Er entscheidet über ihren Ausbau, Umbau
-und ihre Verwendung. Die dazu benötigten Mittel bewilligt der Vorstand
-wohlwollend. Sollte der Vorstand die Bewilligung verweigern, so hat er dies
-binnen zweier Wochen im Vereinsanzeiger umfassend zu begründen.}
+\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die technische Infrastruktur des Vereins.
+  Er entscheidet über ihren Ausbau, Umbau und ihre Verwendung.
+  Die dazu benötigten Mittel bewilligt der Vorstand wohlwollend.
+  Sollte der Vorstand die Bewilligung verweigern, so hat er dies binnen zweier Wochen im Vereinsanzeiger umfassend zu begründen.}
 
-\Satz{3}{Alle Administratoren stellen sicher, daß schnell auf alle für den
-normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
+\Satz{3}{Alle Administratoren stellen sicher, daß schnell auf alle für den normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 
 \end{Artikel}
 
 \begin{Artikel}{27}{Vorsitz und Einberufung}
 
-\Satz{1}{Der erste technische Vorstand ist Vorsitzender des
-Administratorenrats. Der zweite technische Vorstand ist erster
-stellvertretender Administratorenratsvorsitzender, der dritte technische
-Vorstand ist zweiter stellvertretender Administratorenratsvorsitzender.}
+\Satz{1}{Der erste technische Vorstand ist Vorsitzender des Administratorenrats.
+  Der zweite technische Vorstand ist erster stellvertretender Administratorenratsvorsitzender, der dritte technische Vorstand ist zweiter stellvertretender Administratorenratsvorsitzender.}
 
-\Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen
-Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied
-einberufen werden.}
+\Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
 
-\Satz{3}{Der Administratorenrat muß auf Verlangen von 4 seiner Mitglieder
-innerhalb von 2 Wochen einberufen werden.}
+\Satz{3}{Der Administratorenrat muß auf Verlangen von 4 seiner Mitglieder innerhalb von 2 Wochen einberufen werden.}
 
 \end{Artikel}
 
 \begin{Artikel}{28}{Sonderadministratoren}
 
-\Satz{1}{Die Amtsperioden der Sonderadministratoren laufen vom 1. Juli bis 31.
-Dezember und vom 1. Januar bis 30. Juni.}
+\Satz{1}{Die Amtsperioden der Sonderadministratoren laufen vom 1. Juli bis 31. Dezember und vom 1. Januar bis 30. Juni.}
 
-\Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung
-ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
-bestellt.}
+\Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand bestellt.}
 
 \end{Artikel}
 
@@ -545,9 +440,7 @@ bestellt.}
 
 \begin{Artikel}{29}{Satzungsänderungen}
 
-\Satz{1}{Satzungsänderungen beschließt die Mitgliedervollversammlung mit
-Zweidrittelmehrheit auf gemeinsamen Antrag von Vorstand und Administratorenrat
-oder von 15 v.H. der Mitglieder.}
+\Satz{1}{Satzungsänderungen beschließt die Mitgliedervollversammlung mit Zweidrittelmehrheit auf gemeinsamen Antrag von Vorstand und Administratorenrat oder von 15 v.H. der Mitglieder.}
 
 \Satz{2}{Die Änderung ist im Vereinsregister einzutragen.}
 
@@ -557,18 +450,14 @@ oder von 15 v.H. der Mitglieder.}
 
 \Satz{1}{Die Auflösung bestimmt sich nach den Regeln der Satzungsänderung.}
 
-\Satz{2}{Bei Auflösung des Vereins fällt das Vermögen an das Studentenwerk
-München, Anstalt des öffentlichen Rechts, mit der Maßgabe es unmittelbar und
-ausschließlich im Sinn des Vereinszwecks zu verwenden.}
+\Satz{2}{Bei Auflösung des Vereins fällt das Vermögen an das Studentenwerk München, Anstalt des öffentlichen Rechts, mit der Maßgabe es unmittelbar und ausschließlich im Sinn des Vereinszwecks zu verwenden.}
 
 \end{Artikel}
 
 \begin{Artikel}{31}{Vollzug bei Satzungsänderungen}
 
-Die Satzungsänderung ist durch den Vorstand zur Eintragung in das
-Vereinsregister anzumelden. Dem Vorsitzenden ist das Recht übertragen, etwaige
-Satzungsänderungen, die das Registergericht für die Eintragung einer
-Satzungsänderung verlangen sollte, vorzunehmen.
+Die Satzungsänderung ist durch den Vorstand zur Eintragung in das Vereinsregister anzumelden.
+Dem Vorsitzenden ist das Recht übertragen, etwaige Satzungsänderungen, die das Registergericht für die Eintragung einer Satzungsänderung verlangen sollte, vorzunehmen.
 
 \end{Artikel}
 
